# xasd

./: .env  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  requirements.txt  setup.cfg
.github/workflows/: main.yml
deployment-resources/api/: api-configmap.yaml  api-deployment.yaml  api-secret.yaml  api-service.yaml
deployment-resources/mariadb/: mariadb-configmap.yaml  mariadb-secret.yaml  mariadb-service.yaml  mariadb-statefulset.yaml
deployment-resources/mariadb/config/: mariadb.cnf
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.scss
frontend/src/components/: Artist.vue  EditablePlaylistTitle copy.vue  EditablePlaylistTitle.vue  Login.vue  Player.vue  Playlist.vue  PlaylistOptions.vue  Queue.vue  Recommended.vue  Register.vue  Search.vue  SearchResults.vue  Xasd.vue
frontend/src/router/: index.js
frontend/src/utils/: player.js  state.js
frontend/src/views/: XasdView.vue
performance_tests/: Dockerfile  README.md  api.py  datapools.py  docker-compose.yml  journeys.py  run_test.sh  scenarios.py  setup.sh
performance_tests/collector_data/: current_start_time
performance_tests/provisioning/prometheus/: prometheus_config_docker.yml
src/xasd/abc/: __init__.py
src/xasd/api/: __init__.py  dependencies.py
tests/: conftest.py
tests/api/: test_artist.py  test_playlist.py  test_search.py  test_track.py  test_user.py
tests/downloader/: test_torrent.py
tests/uploader/: test_track_info.py
(+49 files in other folders)
