[metadata]
name = xasd
version = 0.0.1
description = tbd

[options]
packages = find_namespace:
install_requires =
    asyncinotify>=2
    b2sdk>=1.12.0
    docopt>=0.6.2
    fastapi[all]>=0.89.0
    mutagen>=1.46.0
    SQLAlchemy>=1
    libtorrent>=2.0.7
    aio-pika>=8.3.0
    PyMySQL>=1.0.2
    cryptography>=39.0.0
    pydub>=0.25.1
    Pillow>=9.4.0
    ImageHash>=4.3.1
    python-jose[cryptography]
    passlib[bcrypt]
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    xasd_uploader = xasd.uploader:main
    xasd_downloader = xasd.downloader:main
    xasd_scraper = xasd.scraper:main


[options.packages.find]
where = src